--- a/nodejs/dbs_revision_app/package.json
+++ b/nodejs/dbs_revision_app/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.0.0",
     "express": "^4.18.1",
     "express-session": "^1.17.2",
     "express-validator": "^6.14.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.2",
     "mysql2": "^2.3.3",
     "uuid": "^8.3.2"
