--- a/python/dbs_flask_tutorial/requirements.txt
+++ b/python/dbs_flask_tutorial/requirements.txt
@@ -1,9 +1,11 @@
 # QUICK START
-# Youtube tutorial: https://www.youtube.com/watch?v=GMppyAPbLYk
+# DBS Youtube tutorial: https://www.youtube.com/watch?v=GMppyAPbLYk
+# Authentication Youtube tutorial: https://youtu.be/71EU8gnZqZQ.
 # 1. Ctrl+Shift+P to open up Command Palette, search for "Python: Select Interpreter".
 # 2. Use Python 3.9.12 to run, Python 3.10.4 not working.
 # 3. To run, open up a terminal and run "python main.py".
-# 4. To execute CRUD operations run "python test.py".
+# 4. Open up a browser and go to http://localhost:5000.
+# 5. Use Postman app to execute the CRUD operation OR run "python test.py".
 
 # INSTALLATION
 # 1. Install the package modules with "pip install -r requirements.txt".
@@ -19,3 +21,17 @@ pytz>=2020.1
 six>=1.15.0
 SQLAlchemy>=1.3.18
 Werkzeug>=1.0.1
+flask_login>=0.6.1
+flask_bcrypt>=1.0.1
+flask_wtf>=1.0.1
+wtforms>=3.0.1
+email_validator>=1.2.1
+
+# SQL
+# 1. To initialize database, run "python", "from main import db", "db.create_all()", "exit()".
+# View SQL tables in command line interface (CLI):
+# 1. https://www.tutorialspoint.com/sqlite/sqlite_installation.htm.
+# View SQL tables in Visual Studio Code:
+# 1. Install VSCode-SQLite: https://stackoverflow.com/questions/40993895/how-to-see-a-sqlite-database-content-with-visual-studio-code.
+# 2. Right click database.db, select Open Database.
+# 3. At Explorer tab look for SQLite Explorer, click the Show Table button (play button icon).
